--- a/scss/trade.scss
+++ b/scss/trade.scss
@@ -135,13 +135,11 @@ body {
   border-radius: 10px;
   display: flex;
   margin: 0px auto;
-  img {
-    padding-right: 15px;
-  }
   .item-name {
     color: $col-orange;
     font-size: 15px;
     font-weight: 400;
+    padding-left: 15px;
   }
 }
 .dropdown-logo {
@@ -150,35 +148,35 @@ body {
 .dropdown-logo.onclick {
   -webkit-transform: rotate(180deg); /* Safari */
   transform: rotate(180deg);
-  margin-right: 0px;
 }
 
 .menu-item-container {
   position: relative;
   .sub-container {
     position: absolute;
-    top: 85px;
+    top: 70px;
     left: 0px;
-    height: 200px;
+    height: 0px;
     width: 100%;
     display: flex;
     flex-direction: column;
-    color: white;
+    overflow: hidden;
+    // top: -500px;
+    transition: height 300ms;
     .sub-menu-item {
-      padding: 20px 10px;
+      padding: 15px 10px 15px 25px;
+      color: #a0a3af;
     }
     .sub-menu-item:hover {
       color: $col-orange;
     }
   }
-  .sub-container {
-    visibility: hidden;
-  }
   .sub-container.active {
-    visibility: visible;
+    // top: 70px;
+    height: 200px;
   }
 }
-// end event click tài sản
+// end-click tài sản
 
 // event click sổ lệnh
 .header__wrap {
@@ -199,6 +197,7 @@ body {
   }
 }
 // end-click sổ lệnh
+
 // header__right
 .header__right {
   display: flex;
