--- a/scss/order-book.css
+++ b/scss/order-book.css
@@ -5,15 +5,13 @@ body {
   font-family: "Roboto";
   box-sizing: border-box;
   padding: 0px;
-  margin: 0px;
-}
+  margin: 0px; }
 
 #root {
   width: 100%;
   max-width: 1920px;
   background-color: #252424;
-  min-height: 100vh;
-}
+  min-height: 100vh; }
 
 .header__wrap {
   position: relative;
@@ -22,36 +20,28 @@ body {
   align-items: center;
   height: 60px;
   padding: 0px 10px;
-  background-color: #131721;
-}
+  background-color: #131721; }
 
 .header__content {
   display: flex;
-  align-items: center;
-}
-.header__content .header__logo {
-  display: flex;
-}
-.header__content .header__logo .fa-solid.fa-xmark {
-  display: none;
-}
-.header__content .header__logo a {
-  text-decoration: none;
-}
-.header__content .header__logo a .lg-name {
-  margin-left: 12px;
-}
-.header__content .header__nav .navHide {
-  display: none;
-}
+  align-items: center; }
+  .header__content .header__logo {
+    display: flex; }
+    .header__content .header__logo .fa-solid.fa-xmark {
+      display: none; }
+    .header__content .header__logo a {
+      text-decoration: none; }
+    .header__content .header__logo a .lg-name {
+      margin-left: 12px; }
+  .header__content .header__nav .navHide {
+    display: none; }
 
 .header__nav .navbar {
   display: flex;
   margin: 0px;
   align-items: center;
   list-style: none;
-  cursor: pointer;
-}
+  cursor: pointer; }
 
 .navbar__item .navbar__item-link {
   display: flex;
@@ -61,12 +51,10 @@ body {
   color: #a0a3af;
   font-size: 14px;
   padding: 0px 16px;
-  border-bottom: 2px;
-}
+  border-bottom: 2px; }
 .navbar__item .navbar__item-link:active {
   color: #e7ab21;
-  border-bottom: 2px solid #e7ab21;
-}
+  border-bottom: 2px solid #e7ab21; }
 
 .header__wrap .sidebar-asset-container {
   padding-top: 25px;
@@ -76,29 +64,23 @@ body {
   width: 280px;
   height: calc(100vh - 60px);
   background-color: #1d2029;
-  transition: left 500ms;
-}
+  transition: left 500ms; }
 
 .menu-item-container {
-  padding: 20px;
-}
+  padding: 20px; }
 
 .menu-item-container:first-child {
   display: flex;
-  margin-bottom: 25px;
-}
-.menu-item-container:first-child img {
-  height: 16px;
-  filter: invert(79%) sepia(34%) saturate(1486%) hue-rotate(344deg) brightness(95%) contrast(89%);
-  padding-right: 10px;
-}
-.menu-item-container:first-child .item-name {
-  color: #a0a3af;
-  font-size: 14px;
-}
-.menu-item-container:first-child .item-name:hover {
-  color: #c5bdbd;
-}
+  margin-bottom: 25px; }
+  .menu-item-container:first-child img {
+    height: 16px;
+    filter: invert(79%) sepia(34%) saturate(1486%) hue-rotate(344deg) brightness(95%) contrast(89%);
+    padding-right: 10px; }
+  .menu-item-container:first-child .item-name {
+    color: #a0a3af;
+    font-size: 14px; }
+  .menu-item-container:first-child .item-name:hover {
+    color: #c5bdbd; }
 
 .menu-item-container:last-child {
   width: 220px;
@@ -107,117 +89,93 @@ body {
   background-color: #292d38;
   border-radius: 10px;
   display: flex;
-  margin: 0px auto;
-}
-.menu-item-container:last-child img {
-  padding-right: 15px;
-}
-.menu-item-container:last-child .item-name {
-  color: #e7ab21;
-  font-size: 15px;
-  font-weight: 600;
-}
+  margin: 0px auto; }
+  .menu-item-container:last-child img {
+    padding-right: 15px; }
+  .menu-item-container:last-child .item-name {
+    color: #e7ab21;
+    font-size: 15px;
+    font-weight: 600; }
 
 .dropdown-logo {
-  margin-left: auto;
-}
+  margin-left: auto; }
 
 .menu-item-container:last-child:hover {
-  background-color: #313541;
-}
+  background-color: #313541; }
 
 .menu-item-container {
-  position: relative;
-}
-.menu-item-container .sub-container {
-  border-left: 2px solid #6f767e;
-  position: absolute;
-  top: 70px;
-  left: 0px;
-  height: 200px;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  color: #6f767e;
-  visibility: hidden;
-  transition: top 5s;
-}
-.menu-item-container .sub-container .sub-menu-item {
-  padding: 15px 35px;
-}
-.menu-item-container .sub-container .sub-menu-item:hover {
-  color: #c5bdbd;
-}
-.menu-item-container .sub-container.active {
-  visibility: visible;
-}
+  position: relative; }
+  .menu-item-container .sub-container {
+    border-left: 2px solid #6f767e;
+    position: absolute;
+    top: 70px;
+    left: 0px;
+    height: 200px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    color: #6f767e;
+    visibility: hidden;
+    transition: top 5s; }
+    .menu-item-container .sub-container .sub-menu-item {
+      padding: 15px 35px; }
+    .menu-item-container .sub-container .sub-menu-item:hover {
+      color: #c5bdbd; }
+  .menu-item-container .sub-container.active {
+    visibility: visible; }
 
 .dropdown-orderBook-logo.click {
+  -webkit-transform: rotate(180deg);
   /* Safari */
-  transform: rotate(180deg);
-}
+  transform: rotate(180deg); }
 
 .header__wrap {
-  position: relative;
-}
-.header__wrap .sidebar-orderbook {
-  position: absolute;
-  left: 0;
-  top: 60px;
-  width: 280px;
-  height: calc(100vh - 60px);
-  background-color: #1d2029;
-  transition: left 500ms;
-  z-index: 2;
-}
+  position: relative; }
+  .header__wrap .sidebar-orderbook {
+    position: absolute;
+    left: 0;
+    top: 60px;
+    width: 280px;
+    height: calc(100vh - 60px);
+    background-color: #1d2029;
+    transition: left 500ms;
+    z-index: 2; }
 
 .sidebar-orderbook {
   display: flex;
-  flex-direction: column;
-}
-.sidebar-orderbook .orderBook__container {
-  position: relative;
-  display: flex;
-  align-items: center;
-  padding: 0px 30px;
-}
-.sidebar-orderbook .orderBook__container:first-child {
-  padding-bottom: 34px;
-}
-.sidebar-orderbook .orderBook__container:first-child img {
-  padding-right: 12px;
-  height: 16px;
-  filter: invert(79%) sepia(34%) saturate(1486%) hue-rotate(344deg) brightness(95%) contrast(89%);
-}
-.sidebar-orderbook .orderBook__container:first-child .orderBook-name {
-  color: #a0a3af;
-}
-.sidebar-orderbook .orderBook__container:first-child .orderBook-name:hover {
-  color: #e7ab21;
-}
-.sidebar-orderbook .orderBook__container:not(:nth-child(1)) {
-  padding-bottom: 150px;
-}
-.sidebar-orderbook .orderBook__container:not(:nth-child(1)) img:last-child {
-  height: 6px;
-}
-.sidebar-orderbook .orderBook__container:not(:nth-child(1)) .orderBook-name {
-  color: #a0a3af;
-  padding-left: 15px;
-  font-weight: 700;
-  font-size: 14px;
-}
-.sidebar-orderbook .orderBook__container:not(:nth-child(1)) .orderBook-name:hover {
-  color: #e7ab21;
-}
-.sidebar-orderbook .orderBook__container:not(:nth-child(1)) .dropdown-orderBook-logo {
-  margin-left: auto;
-  margin-right: 5px;
-}
+  flex-direction: column; }
+  .sidebar-orderbook .orderBook__container {
+    position: relative;
+    display: flex;
+    align-items: center;
+    padding: 0px 30px; }
+  .sidebar-orderbook .orderBook__container:first-child {
+    padding-bottom: 34px; }
+    .sidebar-orderbook .orderBook__container:first-child img {
+      padding-right: 12px;
+      height: 16px;
+      filter: invert(79%) sepia(34%) saturate(1486%) hue-rotate(344deg) brightness(95%) contrast(89%); }
+    .sidebar-orderbook .orderBook__container:first-child .orderBook-name {
+      color: #a0a3af; }
+    .sidebar-orderbook .orderBook__container:first-child .orderBook-name:hover {
+      color: #e7ab21; }
+  .sidebar-orderbook .orderBook__container:not(:nth-child(1)) {
+    padding-bottom: 150px; }
+    .sidebar-orderbook .orderBook__container:not(:nth-child(1)) img:last-child {
+      height: 6px; }
+    .sidebar-orderbook .orderBook__container:not(:nth-child(1)) .orderBook-name {
+      color: #a0a3af;
+      padding-left: 15px;
+      font-weight: 700;
+      font-size: 14px; }
+    .sidebar-orderbook .orderBook__container:not(:nth-child(1)) .orderBook-name:hover {
+      color: #e7ab21; }
+    .sidebar-orderbook .orderBook__container:not(:nth-child(1)) .dropdown-orderBook-logo {
+      margin-left: auto;
+      margin-right: 5px; }
 
 .orderBook__container:first-child {
-  padding-top: 30px;
-}
+  padding-top: 30px; }
 
 .submenu__container {
   position: absolute;
@@ -226,122 +184,97 @@ body {
   left: 50px;
   top: -600px;
   width: 70%;
-  transition: height 300ms;
-}
-.submenu__container .submenu-item {
-  color: #6f767e;
-  padding: 8px 0px 8px 10px;
-}
-.submenu__container .submenu-item:hover {
-  background-color: #292d38;
-  border-radius: 10px;
-  color: #ffffff;
-}
+  transition: height 300ms; }
+  .submenu__container .submenu-item {
+    color: #6f767e;
+    padding: 8px 0px 8px 10px; }
+  .submenu__container .submenu-item:hover {
+    background-color: #292d38;
+    border-radius: 10px;
+    color: #ffffff; }
 
 .orderBook__container .submenu__container.active {
   height: 100px;
-  top: 30px;
-}
+  top: 30px; }
 
 .header__right {
   display: flex;
-  align-items: center;
-}
+  align-items: center; }
 
 .header__flex {
   display: flex;
   align-items: center;
-  border-right: 1px solid #292d38;
-}
-.header__flex .img-transaction {
-  padding: 0px 18px 0px 5px;
-  color: #e7ab21;
-}
-.header__flex span {
-  color: #e7ab21;
-  font-size: 16px;
-  padding-right: 18px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.header__flex span:hover {
-  color: #ffffff;
-}
-.header__flex .star {
-  cursor: pointer;
-  height: 18px;
-  width: 28px;
-  background-color: #cf422f;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 4px;
-}
-.header__flex .star img {
-  height: 10px;
-}
-.header__flex p {
-  margin: 0px;
-  color: #a0a3af;
-  padding: 0px 5px 0px 10px;
-  font-size: 12px;
-}
-.header__flex p:hover {
-  color: #e7ab21;
-}
-.header__flex .dropdown-icon {
-  padding: 0px 12px 0px 4px;
-  height: 5px;
-}
+  border-right: 1px solid #292d38; }
+  .header__flex .img-transaction {
+    padding: 0px 18px 0px 5px;
+    color: #e7ab21; }
+  .header__flex span {
+    color: #e7ab21;
+    font-size: 16px;
+    padding-right: 18px;
+    display: flex;
+    justify-content: center;
+    align-items: center; }
+  .header__flex span:hover {
+    color: #ffffff; }
+  .header__flex .star {
+    cursor: pointer;
+    height: 18px;
+    width: 28px;
+    background-color: #cf422f;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 4px; }
+    .header__flex .star img {
+      height: 10px; }
+  .header__flex p {
+    margin: 0px;
+    color: #a0a3af;
+    padding: 0px 5px 0px 10px;
+    font-size: 12px; }
+  .header__flex p:hover {
+    color: #e7ab21; }
+  .header__flex .dropdown-icon {
+    padding: 0px 12px 0px 4px;
+    height: 5px; }
 
 .header__account {
   display: flex;
-  align-items: center;
-}
-.header__account .account__box {
-  display: flex;
-  align-items: center;
-  cursor: pointer;
-}
-.header__account .account__box span {
-  color: #ffffff;
-  padding-right: 10px;
-}
-.header__account .ring-box {
-  padding: 0px 10px;
-}
-.header__account .avata-girl {
-  padding: 0px 8px;
-}
-.header__account p {
-  padding: 0px 12px;
-  margin: 0px;
-  color: #ffffff;
-}
-.header__account p:hover {
-  color: #e7ab21;
-}
-.header__account .dropdown-icon {
-  height: 5px;
-}
+  align-items: center; }
+  .header__account .account__box {
+    display: flex;
+    align-items: center;
+    cursor: pointer; }
+    .header__account .account__box span {
+      color: #ffffff;
+      padding-right: 10px; }
+  .header__account .ring-box {
+    padding: 0px 10px; }
+  .header__account .avata-girl {
+    padding: 0px 8px; }
+  .header__account p {
+    padding: 0px 12px;
+    margin: 0px;
+    color: #ffffff; }
+  .header__account p:hover {
+    color: #e7ab21; }
+  .header__account .dropdown-icon {
+    height: 5px; }
 
 .menuHide {
   filter: invert(100%) sepia(0%) saturate(7459%) hue-rotate(85deg) brightness(101%) contrast(104%);
   height: 25px;
   width: 25px;
   padding: 0px 10px;
-  margin-bottom: 5px;
-}
-.menuHide .icon-menuHide {
-  color: white;
-}
+  margin-bottom: 5px; }
+  .menuHide .icon-menuHide {
+    color: white; }
 
 .menuHide,
 .navHide,
 .tabBox {
-  display: none;
-}
+  display: none; }
 
 .header__account .account-dropdown {
   position: fixed;
@@ -356,130 +289,96 @@ body {
   color: #e2e2e2;
   display: flex;
   flex-direction: column;
-  padding: 10px 20px;
-}
-.header__account .account-dropdown .item-container {
-  display: flex;
-  align-items: center;
-  padding: 9px 0px;
-}
-.header__account .account-dropdown .item-container .menu-item-name {
-  padding-left: 15px;
-}
-.header__account .account-dropdown .item-container .menu-item-name:hover {
-  color: #e7ab21;
-}
-.header__account .account-dropdown .item-container:last-child {
-  margin-top: 10px;
-  padding: 20px 0px;
-  margin-top: 14px;
-  border-top: 1px solid #313645;
-}
-.header__account .account-dropdown .item-container:last-child .menu-item-name {
-  color: #cf422f;
-}
-.header__account .account-dropdown .menu-item-logo {
-  height: 15px;
-  width: 15px;
-}
-.header__account .account-dropdown .menu-item-name {
-  color: #e2e2e2;
-}
+  padding: 10px 20px; }
+  .header__account .account-dropdown .item-container {
+    display: flex;
+    align-items: center;
+    padding: 9px 0px; }
+    .header__account .account-dropdown .item-container .menu-item-name {
+      padding-left: 15px; }
+    .header__account .account-dropdown .item-container .menu-item-name:hover {
+      color: #e7ab21; }
+  .header__account .account-dropdown .item-container:last-child {
+    margin-top: 10px;
+    padding: 20px 0px;
+    margin-top: 14px;
+    border-top: 1px solid #313645; }
+    .header__account .account-dropdown .item-container:last-child .menu-item-name {
+      color: #cf422f; }
+  .header__account .account-dropdown .menu-item-logo {
+    height: 15px;
+    width: 15px; }
+  .header__account .account-dropdown .menu-item-name {
+    color: #e2e2e2; }
 .header__account .account-dropdown.active {
-  right: 10px;
-}
-.header__account .account-dropdown.active .item-container:last-child {
-  margin-top: 10px;
-  padding: 20px 0px;
-  margin-top: 14px;
-  border-top: 1px solid #313645;
-}
-.header__account .account-dropdown.active .item-container:last-child .menu-item-name {
-  color: #cf422f;
-}
+  right: 10px; }
+  .header__account .account-dropdown.active .item-container:last-child {
+    margin-top: 10px;
+    padding: 20px 0px;
+    margin-top: 14px;
+    border-top: 1px solid #313645; }
+    .header__account .account-dropdown.active .item-container:last-child .menu-item-name {
+      color: #cf422f; }
 
 @media only screen and (max-width: 1496px) {
   .header__nav .navbar {
-    padding-left: 10px;
-  }
-}
+    padding-left: 10px; } }
 @media only screen and (max-width: 1205px) {
   .navbar__item .navbar__item-link {
-    padding: 0px 10px;
-  }
+    padding: 0px 10px; }
 
   .header__flex .img-transaction {
-    padding: 0px 15px 0px 5px;
-  }
+    padding: 0px 15px 0px 5px; }
   .header__flex span {
-    padding-right: 17px;
-  }
+    padding-right: 17px; }
 
   .header__account .ring-box {
-    padding: 0px 12px;
-  }
+    padding: 0px 12px; }
   .header__account p {
-    padding: 0px 10px;
-  }
-}
+    padding: 0px 10px; } }
 @media only screen and (max-width: 1037px) {
   .navbar__item .navbar__item-link {
-    padding: 0px 10px;
-  }
+    padding: 0px 10px; }
 
   .header__flex .img-transaction {
-    padding: 0px 6px;
-  }
+    padding: 0px 6px; }
   .header__flex span {
     padding-right: 17px;
-    font-size: 14px;
-  }
+    font-size: 14px; }
 
   .header__account .avata-girl {
-    padding: 0px 4px;
-  }
-}
+    padding: 0px 4px; } }
 @media only screen and (max-width: 990px) {
   .account-dropdown {
-    display: none;
-  }
+    display: none; }
 
   .header__nav {
-    display: none;
-  }
+    display: none; }
 
   .header__content .header__logo {
-    cursor: pointer;
-  }
-  .header__content .header__logo a .lg-name {
-    margin-left: 15px;
-    height: 18px;
-  }
+    cursor: pointer; }
+    .header__content .header__logo a .lg-name {
+      margin-left: 15px;
+      height: 18px; }
 
   .header__wrap {
-    position: relative;
-  }
+    position: relative; }
 
   .header__left .navbar {
-    display: none;
-  }
+    display: none; }
 
   .header__right .header__flex .img-transaction,
-.header__right .header__flex span,
-.header__right .header__flex p,
-.header__right .header__flex .dropdown-icon {
-    display: none;
-  }
+  .header__right .header__flex span,
+  .header__right .header__flex p,
+  .header__right .header__flex .dropdown-icon {
+    display: none; }
   .header__right .header__account .avata-girl,
-.header__right .header__account p,
-.header__right .header__account .dropdown-icon {
-    display: none;
-  }
+  .header__right .header__account p,
+  .header__right .header__account .dropdown-icon {
+    display: none; }
   .header__right .header__account .account__box {
-    display: none;
-  }
+    display: none; }
   .header__right .menuHide {
-    display: flex;
-  }
-}
+    display: flex; } }
+
 /*# sourceMappingURL=order-book.css.map */
