--- a/scss/trade.css
+++ b/scss/trade.css
@@ -5,15 +5,13 @@ body {
   font-family: "Roboto";
   box-sizing: border-box;
   padding: 0px;
-  margin: 0px;
-}
+  margin: 0px; }
 
 #root {
   width: 100%;
   max-width: 1920px;
   background-color: #252424;
-  min-height: 100vh;
-}
+  min-height: 100vh; }
 
 .header__wrap {
   position: relative;
@@ -22,35 +20,27 @@ body {
   align-items: center;
   height: 60px;
   padding: 0px 10px;
-  background-color: #131721;
-}
+  background-color: #131721; }
 
 .header__content {
   display: flex;
-  align-items: center;
-}
-.header__content .header__logo {
-  display: flex;
-}
-.header__content .header__logo .fa-solid.fa-xmark {
-  display: none;
-}
-.header__content .header__logo a {
-  text-decoration: none;
-}
-.header__content .header__logo a .lg-name {
-  margin-left: 12px;
-}
-.header__content .header__nav .navHide {
-  display: none;
-}
+  align-items: center; }
+  .header__content .header__logo {
+    display: flex; }
+    .header__content .header__logo .fa-solid.fa-xmark {
+      display: none; }
+    .header__content .header__logo a {
+      text-decoration: none; }
+    .header__content .header__logo a .lg-name {
+      margin-left: 12px; }
+  .header__content .header__nav .navHide {
+    display: none; }
 
 .header__nav .navbar {
   display: flex;
   margin: 0px;
   align-items: center;
-  list-style: none;
-}
+  list-style: none; }
 
 .navbar__item .navbar__item-link {
   display: flex;
@@ -60,12 +50,10 @@ body {
   color: #a0a3af;
   font-size: 14px;
   padding: 0px 16px;
-  border-bottom: 2px;
-}
+  border-bottom: 2px; }
 .navbar__item .navbar__item-link:active {
   color: #e7ab21;
-  border-bottom: 2px solid #e7ab21;
-}
+  border-bottom: 2px solid #e7ab21; }
 
 .header__wrap .sidebar-asset-container {
   position: absolute;
@@ -74,32 +62,25 @@ body {
   width: 280px;
   height: calc(100vh - 60px);
   background-color: #1d2029;
-  transition: left 500ms;
-}
+  transition: left 500ms; }
 .header__wrap .sidebar-asset-container.active {
-  left: 0px;
-}
+  left: 0px; }
 
 .menu-item-container {
-  padding: 20px;
-}
-.menu-item-container .item-logo {
-  filter: invert(78%) sepia(68%) saturate(956%) hue-rotate(339deg) brightness(92%) contrast(96%);
-}
+  padding: 20px; }
+  .menu-item-container .item-logo {
+    filter: invert(78%) sepia(68%) saturate(956%) hue-rotate(339deg) brightness(92%) contrast(96%); }
 
 .menu-item-container:first-child {
   display: flex;
-  margin-bottom: 25px;
-}
-.menu-item-container:first-child img {
-  height: 16px;
-  color: white;
-  padding-right: 10px;
-}
-.menu-item-container:first-child .item-name {
-  color: #a0a3af;
-  font-size: 14px;
-}
+  margin-bottom: 25px; }
+  .menu-item-container:first-child img {
+    height: 16px;
+    color: white;
+    padding-right: 10px; }
+  .menu-item-container:first-child .item-name {
+    color: #a0a3af;
+    font-size: 14px; }
 
 .menu-item-container:last-child {
   width: 220px;
@@ -108,163 +89,131 @@ body {
   background-color: #292d38;
   border-radius: 10px;
   display: flex;
-  margin: 0px auto;
-}
-.menu-item-container:last-child .item-name {
-  color: #e7ab21;
-  font-size: 15px;
-  font-weight: 400;
-  padding-left: 15px;
-}
+  margin: 0px auto; }
+  .menu-item-container:last-child .item-name {
+    color: #e7ab21;
+    font-size: 15px;
+    font-weight: 400;
+    padding-left: 15px; }
 
 .dropdown-logo {
-  margin-left: auto;
-}
+  margin-left: auto; }
 
 .dropdown-logo.onclick {
+  -webkit-transform: rotate(180deg);
   /* Safari */
-  transform: rotate(180deg);
-}
+  transform: rotate(180deg); }
 
 .menu-item-container {
-  position: relative;
-}
-.menu-item-container .sub-container {
-  position: absolute;
-  top: 70px;
-  left: 0px;
-  height: 0px;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  overflow: hidden;
-  transition: height 300ms;
-}
-.menu-item-container .sub-container .sub-menu-item {
-  padding: 15px 10px 15px 25px;
-  color: #a0a3af;
-}
-.menu-item-container .sub-container .sub-menu-item:hover {
-  color: #e7ab21;
-}
-.menu-item-container .sub-container.active {
-  height: 200px;
-}
+  position: relative; }
+  .menu-item-container .sub-container {
+    position: absolute;
+    top: 70px;
+    left: 0px;
+    height: 0px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+    transition: height 300ms; }
+    .menu-item-container .sub-container .sub-menu-item {
+      padding: 15px 10px 15px 25px;
+      color: #a0a3af; }
+    .menu-item-container .sub-container .sub-menu-item:hover {
+      color: #e7ab21; }
+  .menu-item-container .sub-container.active {
+    height: 200px; }
 
 .header__wrap {
-  position: relative;
-}
-.header__wrap .sidebar-orderbook {
-  position: absolute;
-  padding-top: 25px;
-  left: -300px;
-  top: 60px;
-  width: 280px;
-  height: calc(100vh - 60px);
-  background-color: #1d2029;
-  transition: left 500ms;
-  z-index: 2;
-}
-.header__wrap .sidebar-orderbook.active {
-  left: 0;
-}
+  position: relative; }
+  .header__wrap .sidebar-orderbook {
+    position: absolute;
+    padding-top: 25px;
+    left: -300px;
+    top: 60px;
+    width: 280px;
+    height: calc(100vh - 60px);
+    background-color: #1d2029;
+    transition: left 500ms;
+    z-index: 2; }
+  .header__wrap .sidebar-orderbook.active {
+    left: 0; }
 
 .header__right {
   display: flex;
-  align-items: center;
-}
+  align-items: center; }
 
 .header__flex {
   display: flex;
   align-items: center;
-  border-right: 1px solid #292d38;
-}
-.header__flex .img-transaction {
-  padding: 0px 18px 0px 5px;
-  color: #e7ab21;
-}
-.header__flex span {
-  color: #e7ab21;
-  font-size: 16px;
-  padding-right: 18px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.header__flex span:hover {
-  color: #ffffff;
-}
-.header__flex .star {
-  height: 18px;
-  width: 28px;
-  background-color: #cf422f;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 4px;
-}
-.header__flex .star img {
-  height: 10px;
-}
-.header__flex p {
-  margin: 0px;
-  color: #a0a3af;
-  padding: 0px 5px 0px 10px;
-  font-size: 12px;
-}
-.header__flex p:hover {
-  color: #e7ab21;
-}
-.header__flex .dropdown-icon {
-  padding: 0px 12px 0px 4px;
-  height: 5px;
-}
+  border-right: 1px solid #292d38; }
+  .header__flex .img-transaction {
+    padding: 0px 18px 0px 5px;
+    color: #e7ab21; }
+  .header__flex span {
+    color: #e7ab21;
+    font-size: 16px;
+    padding-right: 18px;
+    display: flex;
+    justify-content: center;
+    align-items: center; }
+  .header__flex span:hover {
+    color: #ffffff; }
+  .header__flex .star {
+    height: 18px;
+    width: 28px;
+    background-color: #cf422f;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 4px; }
+    .header__flex .star img {
+      height: 10px; }
+  .header__flex p {
+    margin: 0px;
+    color: #a0a3af;
+    padding: 0px 5px 0px 10px;
+    font-size: 12px; }
+  .header__flex p:hover {
+    color: #e7ab21; }
+  .header__flex .dropdown-icon {
+    padding: 0px 12px 0px 4px;
+    height: 5px; }
 
 .header__account {
   display: flex;
-  align-items: center;
-}
-.header__account .account__box {
-  display: flex;
-  align-items: center;
-}
-.header__account .account__box span {
-  color: #ffffff;
-  padding-right: 10px;
-}
-.header__account .ring-box {
-  padding: 0px 10px;
-}
-.header__account .avata-girl {
-  padding: 0px 8px;
-}
-.header__account p {
-  padding: 0px 12px;
-  margin: 0px;
-  color: #ffffff;
-}
-.header__account p:hover {
-  color: #e7ab21;
-}
-.header__account .dropdown-icon {
-  height: 5px;
-}
+  align-items: center; }
+  .header__account .account__box {
+    display: flex;
+    align-items: center; }
+    .header__account .account__box span {
+      color: #ffffff;
+      padding-right: 10px; }
+  .header__account .ring-box {
+    padding: 0px 10px; }
+  .header__account .avata-girl {
+    padding: 0px 8px; }
+  .header__account p {
+    padding: 0px 12px;
+    margin: 0px;
+    color: #ffffff; }
+  .header__account p:hover {
+    color: #e7ab21; }
+  .header__account .dropdown-icon {
+    height: 5px; }
 
 .menuHide {
   height: 25px;
   width: 25px;
   padding: 0px 10px;
-  margin-bottom: 5px;
-}
-.menuHide .icon-menuHide {
-  filter: invert(100%) sepia(0%) saturate(2%) hue-rotate(158deg) brightness(106%) contrast(101%);
-}
+  margin-bottom: 5px; }
+  .menuHide .icon-menuHide {
+    filter: invert(100%) sepia(0%) saturate(2%) hue-rotate(158deg) brightness(106%) contrast(101%); }
 
 .menuHide,
 .navHide,
 .tabBox {
-  display: none;
-}
+  display: none; }
 
 .header__account .account-dropdown {
   position: fixed;
@@ -279,127 +228,94 @@ body {
   color: #e2e2e2;
   display: flex;
   flex-direction: column;
-  padding: 10px 20px;
-}
-.header__account .account-dropdown .item-container {
-  display: flex;
-  align-items: center;
-  padding: 9px 0px;
-}
-.header__account .account-dropdown .item-container .menu-item-name {
-  padding-left: 15px;
-}
-.header__account .account-dropdown .item-container .menu-item-name:hover {
-  color: #e7ab21;
-}
-.header__account .account-dropdown .item-container:last-child {
-  margin-top: 10px;
-  padding: 20px 0px;
-  margin-top: 14px;
-  border-top: 1px solid #313645;
-}
-.header__account .account-dropdown .item-container:last-child .menu-item-name {
-  color: #cf422f;
-}
-.header__account .account-dropdown .menu-item-logo {
-  height: 15px;
-  width: 15px;
-}
-.header__account .account-dropdown .menu-item-name {
-  color: #e2e2e2;
-}
+  padding: 10px 20px; }
+  .header__account .account-dropdown .item-container {
+    display: flex;
+    align-items: center;
+    padding: 9px 0px; }
+    .header__account .account-dropdown .item-container .menu-item-name {
+      padding-left: 15px; }
+    .header__account .account-dropdown .item-container .menu-item-name:hover {
+      color: #e7ab21; }
+  .header__account .account-dropdown .item-container:last-child {
+    margin-top: 10px;
+    padding: 20px 0px;
+    margin-top: 14px;
+    border-top: 1px solid #313645; }
+    .header__account .account-dropdown .item-container:last-child .menu-item-name {
+      color: #cf422f; }
+  .header__account .account-dropdown .menu-item-logo {
+    height: 15px;
+    width: 15px; }
+  .header__account .account-dropdown .menu-item-name {
+    color: #e2e2e2; }
 .header__account .account-dropdown.active {
-  right: 10px;
-}
-.header__account .account-dropdown.active .item-container:last-child {
-  margin-top: 10px;
-  padding: 20px 0px;
-  margin-top: 14px;
-  border-top: 1px solid #313645;
-}
-.header__account .account-dropdown.active .item-container:last-child .menu-item-name {
-  color: #cf422f;
-}
+  right: 10px; }
+  .header__account .account-dropdown.active .item-container:last-child {
+    margin-top: 10px;
+    padding: 20px 0px;
+    margin-top: 14px;
+    border-top: 1px solid #313645; }
+    .header__account .account-dropdown.active .item-container:last-child .menu-item-name {
+      color: #cf422f; }
 
 @media only screen and (max-width: 1496px) {
   .header__nav .navbar {
-    padding-left: 10px;
-  }
-}
+    padding-left: 10px; } }
 @media only screen and (max-width: 1205px) {
   .navbar__item .navbar__item-link {
-    padding: 0px 10px;
-  }
+    padding: 0px 10px; }
 
   .header__flex .img-transaction {
-    padding: 0px 15px 0px 5px;
-  }
+    padding: 0px 15px 0px 5px; }
   .header__flex span {
-    padding-right: 17px;
-  }
+    padding-right: 17px; }
 
   .header__account .ring-box {
-    padding: 0px 12px;
-  }
+    padding: 0px 12px; }
   .header__account p {
-    padding: 0px 10px;
-  }
-}
+    padding: 0px 10px; } }
 @media only screen and (max-width: 1037px) {
   .navbar__item .navbar__item-link {
-    padding: 0px 10px;
-  }
+    padding: 0px 10px; }
 
   .header__flex .img-transaction {
-    padding: 0px 6px;
-  }
+    padding: 0px 6px; }
   .header__flex span {
     padding-right: 17px;
-    font-size: 14px;
-  }
+    font-size: 14px; }
 
   .header__account .avata-girl {
-    padding: 0px 4px;
-  }
-}
+    padding: 0px 4px; } }
 @media only screen and (max-width: 990px) {
   .account-dropdown {
-    display: none;
-  }
+    display: none; }
 
   .header__nav {
-    display: none;
-  }
+    display: none; }
 
   .header__content .header__logo a .lg-name {
     margin-left: 15px;
-    height: 18px;
-  }
+    height: 18px; }
 
   .header__wrap {
-    position: relative;
-  }
+    position: relative; }
 
   .header__left .navbar {
-    display: none;
-  }
+    display: none; }
 
   .header__right .header__flex .img-transaction,
-.header__right .header__flex span,
-.header__right .header__flex p,
-.header__right .header__flex .dropdown-icon {
-    display: none;
-  }
+  .header__right .header__flex span,
+  .header__right .header__flex p,
+  .header__right .header__flex .dropdown-icon {
+    display: none; }
   .header__right .header__account .avata-girl,
-.header__right .header__account p,
-.header__right .header__account .dropdown-icon {
-    display: none;
-  }
+  .header__right .header__account p,
+  .header__right .header__account .dropdown-icon {
+    display: none; }
   .header__right .header__account .account__box {
-    display: none;
-  }
+    display: none; }
   .header__right .menuHide {
-    display: flex;
-  }
-}
+    display: flex; } }
+
 /*# sourceMappingURL=trade.css.map */
