--- a/scss/style.css
+++ b/scss/style.css
@@ -15,13 +15,12 @@ html {
     .container .menu-item-container li {
       list-style-type: none;
       margin: 20px 0px;
-      border-radius: 50%;
-      background-color: chocolate;
-      height: 80px;
-      width: 80px;
+      padding: 8px 0px;
+      width: 120px;
       display: flex;
       justify-content: center;
-      align-items: center; }
+      align-items: center;
+      border: 1px solid #4fd08a; }
       .container .menu-item-container li a {
         text-decoration: none;
         font-size: 16px;
