--- a/scss/style.scss
+++ b/scss/style.scss
@@ -16,13 +16,12 @@ html {
     li {
       list-style-type: none;
       margin: 20px 0px;
-      border-radius: 50%;
-      background-color: chocolate;
-      height: 80px;
-      width: 80px;
+      padding: 8px 0px;
+      width: 120px;
       display: flex;
       justify-content: center;
       align-items: center;
+      border: 1px solid #4fd08a;
       a {
         text-decoration: none;
         font-size: 16px;
